db properties and configurations has been added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=gym-crm
 
-trainer.data.file.path=src/main/resources/Trainer.csv
-trainee.data.file.path=src/main/resources/Trainee.csv
-training.data.file.path=src/main/resources/Training.csv
+spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+# Ensure that initialization scripts are executed
+spring.sql.init.mode=always
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym_crm
+spring.datasource.username=postgres
+spring.datasource.password=nika
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
